# experiments

nccl-all-gather/: README.md  main-gpu.cpp  main.cpp
nccl-all-reduce/: .main-cpu.cpp.swp  CMakeLists.txt  README.md  main.cpp  run.sh
nccl-bcast/: CMakeLists.txt  README.md  main.cpp  run.sh
nccl-gather/: CMakeLists.txt  README.md  main.cpp  run.sh
